# sashiko

./: Cargo.toml  README.md
docs/: llm-providers.md  sashiko-cli.md
sashiko.dev/: email_policy.toml
sashiko.dev/base/app/: sashiko-k8s.yaml
src/: db.rs  git_ops.rs  main.rs  reviewer.rs
src/worker/: prefetch.rs  prompts.rs  tools.rs  tools_test.rs
