[package]
name = "sashiko"
version = "0.1.8"
edition = "2024"
default-run = "sashiko"
description = "Agentic code review system for Linux kernel"
license = "Apache-2.0"
repository = "https://github.com/sashiko-dev/sashiko"
homepage = "https://sashiko.dev"
readme = "README.md"
keywords = ["linux", "kernel", "code-review", "ai", "llm"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "third_party/linux/",
    "llama.cpp/",
    "archives/",
    "review_trees/",
    "sashiko.dev/",
    "designs/",
    ".sashiko*",
    "*.log",
    "*.txt",
    "*.pid",
    "install.sh",
    "test_*.rs",
]

[features]
default = ["bedrock"]
bedrock = ["aws-config", "aws-sdk-bedrockruntime", "aws-smithy-types"]
vertex = ["google-cloud-auth"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }
axum = "0.8.8"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "env"] }
config = "0.15.19"
google-cloud-auth = { version = "1.10", optional = true }
fastrand = "2.3.0"
flate2 = "1.1.9"
futures = "0.3.31"
lettre = { version = "0.11.7", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
libsql = "0.9.29"
mail-parser = "0.11.1"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
tempfile = "3.24.0"
termcolor = "1.4.1"
thiserror = "2.0.17"
tiktoken-rs = "0.6.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec", "io"] }
toml = "0.8"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.6"
tree-sitter-c = "0.24.1"
